lib/gift_parser.rb
# Autogenerated from a Treetop grammar. Edits may be lost.


# Gift format treetop parser

#:nodoc: all
module Gift
  include Treetop::Runtime

  def root
    @root || :gift
  end

  module Gift0
    def question
      elements[1]
    end

    def blank_line
      elements[2]
    end
  end

  module Gift1
    
    @current_category
    
    def questions
      elements.map{|e| e.question}
    end
    
    def commands
      elements.map{|e| e.elements[0].elements[0].command_text}
    end
  end

  def _nt_gift
    start_index = index
    if node_cache[:gift].has_key?(index)
      cached = node_cache[:gift][index]
      @index = cached.interval.end if cached
      return cached
    end

    s0, i0 = [], index
    loop do
      i1, s1 = index, []
      s2, i2 = [], index
      loop do
        r3 = _nt_command
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s1 << r2
      if r2
        r4 = _nt_question
        s1 << r4
        if r4
          r5 = _nt_blank_line
          s1 << r5
        end
      end
      if s1.last
        r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
        r1.extend(Gift0)
      else
        @index = i1
        r1 = nil
      end
      if r1
        s0 << r1
      else
        break
      end
    end
    if s0.empty?
      @index = i0
      r0 = nil
    else
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Gift1)
    end

    node_cache[:gift][start_index] = r0

    r0
  end

  module Command0
  end

  module Command1
    def line_break
      elements[2]
    end
  end

  def _nt_command
    start_index = index
    if node_cache[:command].has_key?(index)
      cached = node_cache[:command][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('$', false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure('$')
      r1 = nil
    end
    s0 << r1
    if r1
      s2, i2 = [], index
      loop do
        i3, s3 = index, []
        i4 = index
        r5 = _nt_line_break
        if r5
          r4 = nil
        else
          @index = i4
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s3 << r4
        if r4
          if index < input_length
            r6 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure("any character")
            r6 = nil
          end
          s3 << r6
        end
        if s3.last
          r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
          r3.extend(Command0)
        else
          @index = i3
          r3 = nil
        end
        if r3
          s2 << r3
        else
          break
        end
      end
      r2 = instantiate_node(SyntaxNode,input, i2...index, s2)
      s0 << r2
      if r2
        r7 = _nt_line_break
        s0 << r7
      end
    end
    if s0.last
      r0 = instantiate_node(Command,input, i0...index, s0)
      r0.extend(Command1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:command][start_index] = r0

    r0
  end

  def _nt_question
    start_index = index
    if node_cache[:question].has_key?(index)
      cached = node_cache[:question][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0 = index
    r1 = _nt_essay_question
    if r1
      r0 = r1
    else
      r2 = _nt_true_false_question
      if r2
        r0 = r2
      else
        r3 = _nt_match_question
        if r3
          r0 = r3
        else
          r4 = _nt_fill_in_question
          if r4
            r0 = r4
          else
            r5 = _nt_short_answer_question
            if r5
              r0 = r5
            else
              r6 = _nt_mutiple_choice_question
              if r6
                r0 = r6
              else
                r7 = _nt_numeric_question
                if r7
                  r0 = r7
                else
                  r8 = _nt_description_question
                  if r8
                    r0 = r8
                  else
                    @index = i0
                    r0 = nil
                  end
                end
              end
            end
          end
        end
      end
    end

    node_cache[:question][start_index] = r0

    r0
  end

  module EssayQuestion0
    def question_text
      elements[3]
    end

  end

  def _nt_essay_question
    start_index = index
    if node_cache[:essay_question].has_key?(index)
      cached = node_cache[:essay_question][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_comment
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_title
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
      if r3
        r6 = _nt_space
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r5
        if r5
          r7 = _nt_question_text
          s0 << r7
          if r7
            if has_terminal?('{', false, index)
              r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('{')
              r8 = nil
            end
            s0 << r8
            if r8
              r10 = _nt_nbsp
              if r10
                r9 = r10
              else
                r9 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r9
              if r9
                if has_terminal?('}', false, index)
                  r11 = instantiate_node(SyntaxNode,input, index...(index + 1))
                  @index += 1
                else
                  terminal_parse_failure('}')
                  r11 = nil
                end
                s0 << r11
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(EssayQuestion,input, i0...index, s0)
      r0.extend(EssayQuestion0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:essay_question][start_index] = r0

    r0
  end

  module TrueFalseQuestion0
    def question_text
      elements[3]
    end

    def answer_list
      elements[6]
    end

  end

  def _nt_true_false_question
    start_index = index
    if node_cache[:true_false_question].has_key?(index)
      cached = node_cache[:true_false_question][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_comment
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_title
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
      if r3
        r6 = _nt_space
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r5
        if r5
          r7 = _nt_question_text
          s0 << r7
          if r7
            if has_terminal?('{', false, index)
              r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('{')
              r8 = nil
            end
            s0 << r8
            if r8
              r10 = _nt_space
              if r10
                r9 = r10
              else
                r9 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r9
              if r9
                i11 = index
                r12 = _nt_true_answer
                if r12
                  r11 = r12
                else
                  r13 = _nt_false_answer
                  if r13
                    r11 = r13
                  else
                    @index = i11
                    r11 = nil
                  end
                end
                s0 << r11
                if r11
                  r15 = _nt_space
                  if r15
                    r14 = r15
                  else
                    r14 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r14
                  if r14
                    if has_terminal?('}', false, index)
                      r16 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('}')
                      r16 = nil
                    end
                    s0 << r16
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(TrueFalseQuestion,input, i0...index, s0)
      r0.extend(TrueFalseQuestion0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:true_false_question][start_index] = r0

    r0
  end

  module ShortAnswerQuestion0
    def question_text
      elements[3]
    end

    def answer_list
      elements[6]
    end

  end

  def _nt_short_answer_question
    start_index = index
    if node_cache[:short_answer_question].has_key?(index)
      cached = node_cache[:short_answer_question][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_comment
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_title
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
      if r3
        r6 = _nt_space
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r5
        if r5
          r7 = _nt_question_text
          s0 << r7
          if r7
            if has_terminal?('{', false, index)
              r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('{')
              r8 = nil
            end
            s0 << r8
            if r8
              r10 = _nt_space
              if r10
                r9 = r10
              else
                r9 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r9
              if r9
                s11, i11 = [], index
                loop do
                  r12 = _nt_right_answer
                  if r12
                    s11 << r12
                  else
                    break
                  end
                end
                if s11.empty?
                  @index = i11
                  r11 = nil
                else
                  r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                end
                s0 << r11
                if r11
                  r14 = _nt_space
                  if r14
                    r13 = r14
                  else
                    r13 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r13
                  if r13
                    if has_terminal?('}', false, index)
                      r15 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('}')
                      r15 = nil
                    end
                    s0 << r15
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(ShortAnswerQuestion,input, i0...index, s0)
      r0.extend(ShortAnswerQuestion0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:short_answer_question][start_index] = r0

    r0
  end

  module MutipleChoiceQuestion0
    def question_text
      elements[3]
    end

    def answer_list
      elements[6]
    end

  end

  def _nt_mutiple_choice_question
    start_index = index
    if node_cache[:mutiple_choice_question].has_key?(index)
      cached = node_cache[:mutiple_choice_question][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_comment
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_title
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
      if r3
        r6 = _nt_space
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r5
        if r5
          r7 = _nt_question_text
          s0 << r7
          if r7
            if has_terminal?('{', false, index)
              r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('{')
              r8 = nil
            end
            s0 << r8
            if r8
              r10 = _nt_space
              if r10
                r9 = r10
              else
                r9 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r9
              if r9
                s11, i11 = [], index
                loop do
                  i12 = index
                  r13 = _nt_wrong_answer
                  if r13
                    r12 = r13
                  else
                    r14 = _nt_right_answer
                    if r14
                      r12 = r14
                    else
                      @index = i12
                      r12 = nil
                    end
                  end
                  if r12
                    s11 << r12
                  else
                    break
                  end
                end
                if s11.empty?
                  @index = i11
                  r11 = nil
                else
                  r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                end
                s0 << r11
                if r11
                  r16 = _nt_space
                  if r16
                    r15 = r16
                  else
                    r15 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r15
                  if r15
                    if has_terminal?('}', false, index)
                      r17 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('}')
                      r17 = nil
                    end
                    s0 << r17
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(MultipleChoiceQuestion,input, i0...index, s0)
      r0.extend(MutipleChoiceQuestion0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:mutiple_choice_question][start_index] = r0

    r0
  end

  module NumericQuestion0
    def question_text
      elements[3]
    end

    def answer_list
      elements[6]
    end

  end

  def _nt_numeric_question
    start_index = index
    if node_cache[:numeric_question].has_key?(index)
      cached = node_cache[:numeric_question][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_comment
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_title
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
      if r3
        r6 = _nt_space
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r5
        if r5
          r7 = _nt_question_text
          s0 << r7
          if r7
            if has_terminal?('{#', false, index)
              r8 = instantiate_node(SyntaxNode,input, index...(index + 2))
              @index += 2
            else
              terminal_parse_failure('{#')
              r8 = nil
            end
            s0 << r8
            if r8
              r10 = _nt_space
              if r10
                r9 = r10
              else
                r9 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r9
              if r9
                s11, i11 = [], index
                loop do
                  r12 = _nt_numeric_answer
                  if r12
                    s11 << r12
                  else
                    break
                  end
                end
                if s11.empty?
                  @index = i11
                  r11 = nil
                else
                  r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                end
                s0 << r11
                if r11
                  if has_terminal?('}', false, index)
                    r13 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure('}')
                    r13 = nil
                  end
                  s0 << r13
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(NumericQuestion,input, i0...index, s0)
      r0.extend(NumericQuestion0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:numeric_question][start_index] = r0

    r0
  end

  module MatchQuestion0
    def question_text
      elements[3]
    end

    def answer_list
      elements[6]
    end

  end

  def _nt_match_question
    start_index = index
    if node_cache[:match_question].has_key?(index)
      cached = node_cache[:match_question][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_comment
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_title
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
      if r3
        r6 = _nt_space
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r5
        if r5
          r7 = _nt_question_text
          s0 << r7
          if r7
            if has_terminal?('{', false, index)
              r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('{')
              r8 = nil
            end
            s0 << r8
            if r8
              r10 = _nt_space
              if r10
                r9 = r10
              else
                r9 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r9
              if r9
                s11, i11 = [], index
                loop do
                  r12 = _nt_match_answer
                  if r12
                    s11 << r12
                  else
                    break
                  end
                end
                if s11.empty?
                  @index = i11
                  r11 = nil
                else
                  r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                end
                s0 << r11
                if r11
                  if has_terminal?('}', false, index)
                    r13 = instantiate_node(SyntaxNode,input, index...(index + 1))
                    @index += 1
                  else
                    terminal_parse_failure('}')
                    r13 = nil
                  end
                  s0 << r13
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(MatchQuestion,input, i0...index, s0)
      r0.extend(MatchQuestion0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:match_question][start_index] = r0

    r0
  end

  module FillInQuestion0
  end

  module FillInQuestion1
  end

  module FillInQuestion2
    def question_text
      elements[3]
    end

    def answer_list
      elements[6]
    end

  end

  def _nt_fill_in_question
    start_index = index
    if node_cache[:fill_in_question].has_key?(index)
      cached = node_cache[:fill_in_question][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_comment
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_title
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
      if r3
        r6 = _nt_space
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r5
        if r5
          r7 = _nt_question_text
          s0 << r7
          if r7
            if has_terminal?('{', false, index)
              r8 = instantiate_node(SyntaxNode,input, index...(index + 1))
              @index += 1
            else
              terminal_parse_failure('{')
              r8 = nil
            end
            s0 << r8
            if r8
              r10 = _nt_space
              if r10
                r9 = r10
              else
                r9 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r9
              if r9
                s11, i11 = [], index
                loop do
                  i12 = index
                  r13 = _nt_wrong_answer
                  if r13
                    r12 = r13
                  else
                    r14 = _nt_right_answer
                    if r14
                      r12 = r14
                    else
                      @index = i12
                      r12 = nil
                    end
                  end
                  if r12
                    s11 << r12
                  else
                    break
                  end
                end
                if s11.empty?
                  @index = i11
                  r11 = nil
                else
                  r11 = instantiate_node(SyntaxNode,input, i11...index, s11)
                end
                s0 << r11
                if r11
                  r16 = _nt_space
                  if r16
                    r15 = r16
                  else
                    r15 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r15
                  if r15
                    if has_terminal?('}', false, index)
                      r17 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure('}')
                      r17 = nil
                    end
                    s0 << r17
                    if r17
                      s18, i18 = [], index
                      loop do
                        i19, s19 = index, []
                        i20 = index
                        if has_terminal?('\G[\\r\\n]', true, index)
                          r21 = true
                          @index += 1
                        else
                          r21 = nil
                        end
                        if r21
                          r20 = nil
                        else
                          @index = i20
                          r20 = instantiate_node(SyntaxNode,input, index...index)
                        end
                        s19 << r20
                        if r20
                          i22 = index
                          i23, s23 = index, []
                          if has_terminal?("\\", false, index)
                            r24 = instantiate_node(SyntaxNode,input, index...(index + 1))
                            @index += 1
                          else
                            terminal_parse_failure("\\")
                            r24 = nil
                          end
                          s23 << r24
                          if r24
                            if has_terminal?('\G[=~{}#:]', true, index)
                              r25 = true
                              @index += 1
                            else
                              r25 = nil
                            end
                            s23 << r25
                          end
                          if s23.last
                            r23 = instantiate_node(SyntaxNode,input, i23...index, s23)
                            r23.extend(FillInQuestion0)
                          else
                            @index = i23
                            r23 = nil
                          end
                          if r23
                            r22 = r23
                          else
                            if index < input_length
                              r26 = instantiate_node(SyntaxNode,input, index...(index + 1))
                              @index += 1
                            else
                              terminal_parse_failure("any character")
                              r26 = nil
                            end
                            if r26
                              r22 = r26
                            else
                              @index = i22
                              r22 = nil
                            end
                          end
                          s19 << r22
                        end
                        if s19.last
                          r19 = instantiate_node(SyntaxNode,input, i19...index, s19)
                          r19.extend(FillInQuestion1)
                        else
                          @index = i19
                          r19 = nil
                        end
                        if r19
                          s18 << r19
                        else
                          break
                        end
                      end
                      if s18.empty?
                        @index = i18
                        r18 = nil
                      else
                        r18 = instantiate_node(SyntaxNode,input, i18...index, s18)
                      end
                      s0 << r18
                    end
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(FillInQuestion,input, i0...index, s0)
      r0.extend(FillInQuestion2)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:fill_in_question][start_index] = r0

    r0
  end

  module DescriptionQuestion0
    def question_text
      elements[3]
    end
  end

  def _nt_description_question
    start_index = index
    if node_cache[:description_question].has_key?(index)
      cached = node_cache[:description_question][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    r2 = _nt_comment
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      r4 = _nt_title
      if r4
        r3 = r4
      else
        r3 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r3
      if r3
        r6 = _nt_space
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r5
        if r5
          r7 = _nt_question_text
          s0 << r7
        end
      end
    end
    if s0.last
      r0 = instantiate_node(DescriptionQuestion,input, i0...index, s0)
      r0.extend(DescriptionQuestion0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:description_question][start_index] = r0

    r0
  end

  module Number0
  end

  module Number1
  end

  def _nt_number
    start_index = index
    if node_cache[:number].has_key?(index)
      cached = node_cache[:number][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?('\G[+-]', true, index)
      r2 = true
      @index += 1
    else
      r2 = nil
    end
    if r2
      r1 = r2
    else
      r1 = instantiate_node(SyntaxNode,input, index...index)
    end
    s0 << r1
    if r1
      s3, i3 = [], index
      loop do
        if has_terminal?('\G[\\d]', true, index)
          r4 = true
          @index += 1
        else
          r4 = nil
        end
        if r4
          s3 << r4
        else
          break
        end
      end
      if s3.empty?
        @index = i3
        r3 = nil
      else
        r3 = instantiate_node(SyntaxNode,input, i3...index, s3)
      end
      s0 << r3
      if r3
        i6, s6 = index, []
        i7 = index
        if has_terminal?("..", false, index)
          r8 = instantiate_node(SyntaxNode,input, index...(index + 2))
          @index += 2
        else
          terminal_parse_failure("..")
          r8 = nil
        end
        if r8
          r7 = nil
        else
          @index = i7
          r7 = instantiate_node(SyntaxNode,input, index...index)
        end
        s6 << r7
        if r7
          if has_terminal?(".", false, index)
            r9 = instantiate_node(SyntaxNode,input, index...(index + 1))
            @index += 1
          else
            terminal_parse_failure(".")
            r9 = nil
          end
          s6 << r9
          if r9
            s10, i10 = [], index
            loop do
              if has_terminal?('\G[\\d]', true, index)
                r11 = true
                @index += 1
              else
                r11 = nil
              end
              if r11
                s10 << r11
              else
                break
              end
            end
            r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
            s6 << r10
          end
        end
        if s6.last
          r6 = instantiate_node(SyntaxNode,input, i6...index, s6)
          r6.extend(Number0)
        else
          @index = i6
          r6 = nil
        end
        if r6
          r5 = r6
        else
          r5 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r5
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Number1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:number][start_index] = r0

    r0
  end

  module Weight0
  end

  def _nt_weight
    start_index = index
    if node_cache[:weight].has_key?(index)
      cached = node_cache[:weight][index]
      @index = cached.interval.end if cached
      return cached
    end

    i0, s0 = index, []
    if has_terminal?("%", false, index)
      r1 = instantiate_node(SyntaxNode,input, index...(index + 1))
      @index += 1
    else
      terminal_parse_failure("%")
      r1 = nil
    end
    s0 << r1
    if r1
      if has_terminal?('\G[+-]', true, index)
        r3 = true
        @index += 1
      else
        r3 = nil
      end
      if r3
        r2 = r3
      else
        r2 = instantiate_node(SyntaxNode,input, index...index)
      end
      s0 << r2
      if r2
        if has_terminal?('\G[1]', true, index)
          r5 = true
          @index += 1
        else
          r5 = nil
        end
        if r5
          r4 = r5
        else
          r4 = instantiate_node(SyntaxNode,input, index...index)
        end
        s0 << r4
        if r4
          if has_terminal?('\G[\\d]', true, index)
            r7 = true
            @index += 1
          else
            r7 = nil
          end
          if r7
            r6 = r7
          else
            r6 = instantiate_node(SyntaxNode,input, index...index)
          end
          s0 << r6
          if r6
            if has_terminal?('\G[\\d]', true, index)
              r8 = true
              @index += 1
            else
              r8 = nil
            end
            s0 << r8
            if r8
              if has_terminal?(".", false, index)
                r10 = instantiate_node(SyntaxNode,input, index...(index + 1))
                @index += 1
              else
                terminal_parse_failure(".")
                r10 = nil
              end
              if r10
                r9 = r10
              else
                r9 = instantiate_node(SyntaxNode,input, index...index)
              end
              s0 << r9
              if r9
                if has_terminal?('\G[\\d]', true, index)
                  r12 = true
                  @index += 1
                else
                  r12 = nil
                end
                if r12
                  r11 = r12
                else
                  r11 = instantiate_node(SyntaxNode,input, index...index)
                end
                s0 << r11
                if r11
                  if has_terminal?('\G[\\d]', true, index)
                    r14 = true
                    @index += 1
                  else
                    r14 = nil
                  end
                  if r14
                    r13 = r14
                  else
                    r13 = instantiate_node(SyntaxNode,input, index...index)
                  end
                  s0 << r13
                  if r13
                    if has_terminal?("%", false, index)
                      r15 = instantiate_node(SyntaxNode,input, index...(index + 1))
                      @index += 1
                    else
                      terminal_parse_failure("%")
                      r15 = nil
                    end
                    s0 << r15
                  end
                end
              end
            end
          end
        end
      end
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(Weight0)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:weight][start_index] = r0

    r0
  end

  module NumericAnswer0
    def value
      elements[0]
    end

  end

  module NumericAnswer1
    def answer
     {:maximum => value.maximum, :minimum => value.minimum}
    end
  end

  def _nt_numeric_answer
    start_index = index
    if node_cache[:numeric_answer].has_key?(index)
      cached = node_cache[:numeric_answer][index]
      @index = cached.interval.end if cached
      return cached
    end
